fixed nav offcenter and font

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,6 @@
 	font-family: 'Open Sans', sans-serif;
 }
 
-body {
-
+#navBarItem {
+	color: #696969;
 }
